fix background stretch

--- a/smallscreen.css
+++ b/smallscreen.css
@@ -129,7 +129,8 @@ h5 {
 
 .grid-item {
   min-height: 30vh;
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 .cover-title {
@@ -395,4 +396,8 @@ footer > div:first-child {
   top: 0.2em;
   left: 0;
   opacity: 0.9;
+}
+
+.latest-funding-section > div:last-child > section:last-child{
+  display: none;
 }
